--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Project</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to CSS file -->
+    <title>Rain Animation with Water Waves</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first HTML and CSS project.</p>
-    <p> Actually that's not really true :))</p>
-    <p id="p1"> Let's see if it's true</p>
+    <div class="rain-container"></div>
+    <div class="water"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
